name:                  ambiata-mismi-core-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base                            >= 3          && < 5
                     , amazonka                        == 1.3.2
                     , amazonka-core                   == 1.3.2
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-p
                     , either                          == 4.3.*
                     , exceptions                      >= 0.6        && < 0.9
                     , filepath                        == 1.3.*
                     , http-client                     == 0.4.18.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.5
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , unix                            == 2.7.*
                     , temporary                       == 1.2.*
                     , uuid                            == 1.3.*

  exposed-modules:
                       Test.Mismi.Arbitrary
                       Test.Mismi
