name:                  ambiata-mismi-core-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base                            >= 3          && < 6
                     , amazonka                        >= 1.3.6      && < 1.6
                     , amazonka-core                   >= 1.3.6      && < 1.6
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-mismi-kernel
                     , ambiata-mismi-kernel-test
                     , ambiata-p
                     , ambiata-x-eithert
                     , exceptions                      >= 0.6        && < 0.9
                     , filepath                        >= 1.3        && < 1.5
                     , http-client                     >= 0.4.18     && < 0.6
                     , resourcet                       == 1.1.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
                     , unix                            == 2.7.*
                     , temporary                       == 1.2.*
                     , uuid                            == 1.3.*

  exposed-modules:
                       Test.Mismi.Arbitrary
                       Test.Mismi
