name:                  ambiata-mismi-ec2-core-test
version:               0.1.5
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-mismi-ec2-core
                     , text
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*


  exposed-modules:
                     Test.Mismi.EC2.Core.Arbitrary
